<resources>
    <string name="app_name">LaalSobuj</string>
    <string name="welcome">Welcome</string>
    <string name="invoice_tag_line"> - Online Marketplace for Buying in reasonable price.</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="all_categories">All Categories</string>
    <string name="daily_deals">Daily Deals</string>
    <string name="my_orders">My Orders</string>
    <string name="message">Message</string>
    <string name="liked">Liked</string>
    <string name="offer1">use this coupon to get extra</string>
    <string name="offer2">discount from</string>
    <string name="offer3">to</string>
    <string name="offer4">limited for first</string>
    <string name="collection" translatable="false">Collection</string>
    <string name="group_gift">Group Gift</string>
    <string name="gift_card">Gift Card</string>
    <string name="invite_earn">Invite and Credits</string>
    <string name="help">Help</string>
    <string name="rate_app">Rate the app</string>
    <string name="logout">Logout</string>
    <string name="search_products">Search for products</string>
    <string name="deal_of_day">DEAL OF THE DAY</string>
    <string name="grap_best_deal">Grap the best deal everyday!</string>
    <string name="view_all">View all</string>
    <string name="popular_products">Popular Products</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="suggest_items">Suggested Items</string>
    <string name="toprated">Top Rated</string>
    <string name="featured">Featured</string>
    <string name="popular_store">Popular Store</string>
    <string name="category_products">Featured Category products</string>
    <string name="clear_hitsory">Clear History</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="all_stores">All Stores</string>
    <string name="edit_a_comment">Edit a comment</string>
    <string name="shareit">Share it</string>
    <string name="size">Size</string>
    <string name="cod_available">COD available</string>
    <string name="availableoffer">AVAILABLE OFFERS</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="create_group_gift">Create group gift</string>
    <string name="description">DESCRIPTION</string>
    <string name="product_selfies">PRODUCT SELFIES</string>
    <string name="comments">COMMENTS</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="write_answer">Write Answer</string>
    <string name="post_answer">POST YOUR ANSWER</string>
    <string name="allanswers">All Answers</string>
    <string name="allreviews">All Reviews</string>
    <string name="read_answer">Read other answers</string>
    <string name="sold_by">SOLD BY</string>
    <string name="rating">Rating</string>
    <string name="ask_question">Ask a question</string>
    <string name="chatwith">Chat with seller</string>
    <string name="questionans">QUESTIONS &amp; ANSWERS</string>
    <string name="viewall">View all</string>
    <string name="writereview">WRITE A REVIEW</string>
    <string name="editreview">Edit review</string>
    <string name="writereviewsmall">Write a review</string>
    <string name="postquestion">POST A QUESTION</string>
    <string name="writequestion">Write a Question</string>
    <string name="younotpurchase">You haven\'t purchased this product yet</string>
    <string name="alreadyreview">Already you reviewed it</string>
    <string name="similar_products">SIMILAR PRODUCTS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="all_comments">All comments</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="send">Send</string>
    <string name="select_query">Select a query</string>
    <string name="subject">Subject</string>
    <string name="type_your_message">Type your message</string>
    <string name="type_here">Type here</string>
    <string name="contact_seller">Contact seller</string>
    <string name="by">By</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="popularity">Popularity</string>
    <string name="price_low_high">Price low to high</string>
    <string name="price_high_low">Price high to low</string>
    <string name="newest">Newest</string>
    <string name="following">Following</string>
    <string name="categories">Categories</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="near_me">Near me</string>
    <string name="product_type">Product type</string>
    <string name="clear">CLEAR</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="affiliate_products">Affiliate products</string>
    <string name="shop_products">Shop products</string>
    <string name="min_price">MIN PRICE</string>
    <string name="max_price">MAX PRICE</string>
    <string name="distance_miles">DISTANCE IN MILES</string>
    <string name="create_collection">Create collection</string>
    <string name="enter_collection_name">Enter collection name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signup_withPhone">SIGN UP WITH PHONE</string>
    <string name="signin_des1">Sign in to access your order, wishlist and recommendation</string>
    <string name="email">Email/Phone</string>
    <string name="zip">Zip/Post Code</string>
    <string name="storename">Store Name</string>
    <string name="district">District Name</string>
    <string name="password">Password</string>
    <string name="or_signin_using">or Sign in using</string>
    <string name="new_user">If You are a new User?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="items">items</string>
    <string name="create_collection_subtitle">Shop easy by adding products with mutiple collections</string>
    <string name="create">Create</string>
    <string name="edit_your_collection">Edit your collection</string>
    <string name="change_collection_name">Change the collection name by your wish</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_collection_msg">Are you sure want to delete this collection\u003F</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="stores">Stores</string>
    <string name="wishlist">Wishlist</string>
    <string name="address_book">Address book</string>
    <string name="settings">Settings</string>
    <string name="find_friends">Find a friends</string>
    <string name="dispute">Dispute</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change">Change</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="infoApaCode">Info Apa Code</string>
    <string name="add_new">Add new</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="products">Products</string>
    <string name="review">Review</string>
    <string name="reviewrating">REVIEWS &amp; RATINGS</string>
    <string name="news">News</string>
    <string name="continu">Continue</string>
    <string name="go_back_home">Go back to Home</string>
    <string name="change_add_address">Change or add address</string>
    <string name="add_address">Add address</string>
    <string name="cart">Cart</string>
    <string name="order_summary">Order summary</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="tax">Tax</string>
    <string name="payable_amount">Payable amount</string>
    <string name="payment">Payment</string>
    <string name="coupon">Coupon</string>
    <string name="checkout">Checkout</string>
    <string name="apply">Apply</string>
    <string name="coupon_code">Coupon code</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="coupon_should_not_empty">Coupon should not be empty</string>
    <string name="voucher_number">Voucher number</string>
    <string name="voucher_applied">voucher was applied</string>
    <string name="remove">Remove</string>
    <string name="voucher_should_not_empty">Voucher should not be empty</string>
    <string name="use">Use</string>
    <string name="enter_amount">Enter amount</string>
    <string name="used_from_credit">used from credit</string>
    <string name="amount_should_not_empty">Amount should not be empty</string>
    <string name="discount">Discount</string>
    <string name="cash_on_delivery">Cash on Delivery (COD)</string>
    <string name="instant_pay">SSL Commerce (Bkash, Rocket, AB Bank, Credit/Debit card)</string>
    <string name="your_order_placed_successfully">Your order placed successfully!</string>
    <string name="please_visit_order_page">Please visit my order page to check the order progress and more details.</string>
    <string name="view_order_history">View order history</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="your_primary_address">Your primary address</string>
    <string name="select_address">Select address</string>
    <string name="primary_address">Primary address</string>
    <string name="full_name">Full name</string>
    <string name="nick_name">Nick name</string>
    <string name="address_line1">Address line 1</string>
    <string name="address_line2">Address line 2</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_no">Phone number</string>
    <string name="chatfilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ ()*-+=.,@&amp;?#!$%:_&lt;&gt;&quot;^ </string>
    <string name="Passwordfilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.$@#%-*:?!_,&amp;</string>
    <string name="Emailfilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.@-_</string>
    <string name="fullnamefilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ .@-_</string>
    <string name="commentsfilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ ()*-+=.,@&amp;?#!$%:_&lt;&gt;&quot;^</string>
    <string name="please_fill_all">Please fill all the details</string>
    <string name="how_it_works">How it works\u003F</string>
    <string name="group_gift_steps">1. Select the product which you want to gift \n2. Share and invite your friends to contribute a gift amount \n3. After the successful contribution, gift will deliver to recipient</string>
    <string name="ok">Ok</string>
    <string name="email_support">Email support</string>
    <string name="well_get_back_asap">We\'ll get back to you as soon as possible</string>
    <string name="select_topic">Select a topic</string>
    <string name="order_number">Order number (If applicable)</string>
    <string name="user_account">User account</string>
    <string name="email_us">Email us</string>
    <string name="call_us">Call us</string>
    <string name="download_invoice">Download invoice</string>
    <string name="home">Home</string>
    <string name="create_dispute">Create dispute</string>
    <string name="layout_direction">0</string>
    <string name="live_feeds">Live Feeds</string>
</resources>