<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/address_book"
        android:orderInCategory="100"
        android:title="@string/address_book"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/find_friends"
        android:orderInCategory="100"
        android:title="@string/find_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/dispute"
        android:orderInCategory="100"
        android:title="@string/dispute"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
