<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_dispute"
        android:orderInCategory="100"
        android:title="@string/create_dispute"
        app:showAsAction="never" />
    <!-- <item
         android:id="@+id/contact_seller"
         android:orderInCategory="100"
         android:title="@string/contact_seller"
         app:showAsAction="never" />-->

    <item
        android:id="@+id/download_invoice"
        android:orderInCategory="100"
        android:title="@string/download_invoice"
        app:showAsAction="never" />
</menu>
