<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLay"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_gravity="top"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <include
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/actionbar_layout" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="@string/layout_direction"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_support"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium" />

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/well_get_back_asap"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_regular.ttf"
                    android:id="@+id/alertText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/colorAccent"
                    android:text="@string/please_fill_all"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/white"
                    android:visibility="gone"/>

                <com.futureskyltd.app.external.CustomEditText
                    app:typeface="font_regular.ttf"
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/textPrimary"/>

                <com.futureskyltd.app.external.CustomEditText
                    app:typeface="font_regular.ttf"
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/textPrimary"/>

                <Spinner
                    android:id="@+id/selectTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:prompt="@string/select_topic"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:dropDownWidth="match_parent"
                    android:dropDownAnchor="@+id/spinView"/>

                <View
                    android:id="@+id/spinView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"/>

                <com.futureskyltd.app.external.CustomEditText
                    app:typeface="font_regular.ttf"
                    android:id="@+id/orderNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/order_number"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/textPrimary"/>

                <com.futureskyltd.app.external.CustomEditText
                    app:typeface="font_regular.ttf"
                    android:id="@+id/userAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/user_account"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/textPrimary"/>

                <com.futureskyltd.app.external.CustomEditText
                    app:typeface="font_regular.ttf"
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@color/white"
                    android:gravity="top"
                    android:maxLength="250"
                    android:hint="@string/message"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/textPrimary"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_regular.ttf"
                    android:id="@+id/addressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="B-12, effil street, Neywork"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/emailText"
                    android:text="@string/email_us"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_regular.ttf"
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_size_medium" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/callText"
                    android:text="@string/call_us"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/text_size_medium" />

                <com.futureskyltd.app.external.CustomTextView
                    app:typeface="font_regular.ttf"
                    android:id="@+id/callText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_size_medium" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/divider"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>